fix(components/switcher): switcher item with optional text should appear correctly #2412

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -10,6 +10,9 @@
   [pseudoPressed]="isActive"
   type="button"
   prizmButton
+  [attr.prizmIconButton]="prizmHasValue.empty ? true : null"
+  #prizmHasValue="prizmHasValue"
+  prizmHasValue
 >
   <ng-content></ng-content>
 </button>
