fix(components/widget): change widget button soze to xm #2426

--- a/apps/doc/src/app/components/widget/examples/with-templates/widget-with-templates-example.component.html
+++ b/apps/doc/src/app/components/widget/examples/with-templates/widget-with-templates-example.component.html
@@ -12,7 +12,7 @@
     prizmIconButton
     appearanceType="ghost"
     appearance="secondary"
-    size="s"
+    size="xm"
   ></button>
 
   <ng-template #iconTemplate>
@@ -30,7 +30,7 @@
     prizmIconButton
     appearanceType="ghost"
     appearance="secondary"
-    size="m"
+    size="xm"
   ></button>
 
   <ng-template #iconTemplate>
