--- a/libs/components/src/lib/components/widget/widget.component.html
+++ b/libs/components/src/lib/components/widget/widget.component.html
@@ -16,7 +16,7 @@
                 prizmIconButton
                 appearanceType="ghost"
                 appearance="secondary"
-                size="s"
+                size="xm"
               ></button>
             </ng-container>
           </ng-container>
