--- a/libs/components/src/lib/components/cron/cron.component.html
+++ b/libs/components/src/lib/components/cron/cron.component.html
@@ -22,14 +22,11 @@
           size="m"
         >
           <input
-            #elem
-            [prizmHint]="valueStr"
             [readonly]="true"
-            [prizmHintCanShow]="prizmIsTextOverflow(elem.elementRef.nativeElement)"
             [ngModel]="valueStr"
             [ngModelOptions]="{ standalone: true }"
             prizmInput
-            prizmHintDirection="b"
+            [prizmHintCanShow]="true"
           />
 
           <ng-container prizm-input-right>
@@ -56,15 +53,12 @@
       size="m"
     >
       <input
-        #humarReadableElem
         *prizmLet="$any(valueAsString$ | async) | prizmCronHumanReadable | async as humanReadableStr"
-        [prizmHint]="humanReadableStr"
         [readonly]="true"
-        [prizmHintCanShow]="prizmIsTextOverflow(humarReadableElem.elementRef.nativeElement)"
         [ngModel]="humanReadableStr"
         [ngModelOptions]="{ standalone: true }"
         prizmInput
-        prizmHintDirection="b"
+        [prizmHintCanShow]="true"
       />
 
       <ng-container prizm-input-right>
