feat(components/input-layout): required asterisk should be hidden for disabled controls #1918

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.html
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.html
@@ -34,7 +34,7 @@
         <div class="label--title">
           {{ label$ | async }}
         </div>
-        <span class="prizm-input-label-required" *ngIf="$.required">*</span>
+        <span class="prizm-input-label-required" *ngIf="$.required && !$.disabled">*</span>
       </label>
 
       <ng-container [ngSwitch]="isPolymorphPrimitive(clearButton)">
