--- a/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
+++ b/apps/doc/src/app/components/input/input-tree-multi-select/input-tree-multi-select.component.html
@@ -3,6 +3,9 @@
     Our tree-multi-select component is a wrapper around the input tree multi-select element.
   </div>
   <ng-template prizmDocPageTab>
+    <prizm-doc-example id="base" [content]="exampleBase" heading="Base">
+      <prizm-tree-select-base-example></prizm-tree-select-base-example>
+    </prizm-doc-example>
     <prizm-doc-example id="projection" [content]="exampleProjection" heading="Projection">
       <prizm-tree-select-projection-example></prizm-tree-select-projection-example>
     </prizm-doc-example>
