feat(components/none-content): add new component #2404

--- a/apps/doc/src/app/components/none-content/examples/base/none-content-base-example.component.html
+++ b/apps/doc/src/app/components/none-content/examples/base/none-content-base-example.component.html
@@ -1,1 +1,3 @@
-<prizm-none-content></prizm-none-content>
+<prizm-widget title="Заголовок виджета">
+  <prizm-none-content></prizm-none-content>
+</prizm-widget>
