--- a/apps/doc/src/app/components/none-content/none-content-example.component.html
+++ b/apps/doc/src/app/components/none-content/none-content-example.component.html
@@ -4,6 +4,10 @@
     <prizm-doc-example id="base" [content]="exampleBase" heading="Base">
       <prizm-none-content-base-example></prizm-none-content-base-example>
     </prizm-doc-example>
+
+    <prizm-doc-example id="custom" [content]="exampleCustom" heading="Custom">
+      <prizm-none-content-custom-example></prizm-none-content-custom-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
