feat(components/none-content): small improvments and class name fix #2404

--- a/apps/doc/src/app/components/none-content/examples/custom/none-content-custom-example.component.html
+++ b/apps/doc/src/app/components/none-content/examples/custom/none-content-custom-example.component.html
@@ -3,7 +3,7 @@
     <ng-container descriptionText>
       <ng-container *prizmIfLang="'russian'; else eng">
         <div class="container">
-          <span>Возникла ошибка загрузки.</span>
+          <span>Возникла ошибка загрузки</span>
 
           <button prizmButton>Повторить</button>
         </div>
@@ -14,7 +14,7 @@
 
 <ng-template #eng>
   <div class="container">
-    <span>Loading error.</span>
+    <span>Loading error</span>
 
     <button prizmButton>Retry</button>
   </div>
