--- a/apps/doc/src/app/components/none-content/none-content-example.component.html
+++ b/apps/doc/src/app/components/none-content/none-content-example.component.html
@@ -11,18 +11,9 @@
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
-    <prizm-doc-demo> test </prizm-doc-demo>
-    <prizm-doc-documentation>
-      <!-- <ng-template
-        [(documentationPropertyValue)]="shadow"
-        [documentationPropertyValues]="shadowVariants"
-        documentationPropertyName="shadow"
-        documentationPropertyType="PrizmShadowType"
-        documentationPropertyMode="input"
-      >
-        Shadow
-      </ng-template> -->
-    </prizm-doc-documentation>
+    <prizm-doc-demo>
+      <prizm-none-content></prizm-none-content>
+    </prizm-doc-demo>
   </ng-template>
 
   <ng-template prizmDocPageTab>
