--- a/libs/components/src/lib/components/none-content/none-content.component.less
+++ b/libs/components/src/lib/components/none-content/none-content.component.less
@@ -13,7 +13,7 @@
     .text-default {
       display: none;
     }
-    .custom-text:empty + .text-default {
+    .text-custom:empty + .text-default {
       display: block;
     }
   }
