--- a/libs/components/src/lib/components/none-content/none-content.component.less
+++ b/libs/components/src/lib/components/none-content/none-content.component.less
@@ -5,6 +5,7 @@
   background-color: var(--prizm-background-fill-primary);
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   text-align: center;
   gap: 16px;
