--- a/apps/doc/src/app/components/side-menu/examples/side-menu-example-basic/side-menu-example-basic.component.less
+++ b/apps/doc/src/app/components/side-menu/examples/side-menu-example-basic/side-menu-example-basic.component.less
@@ -55,7 +55,7 @@
           overflow: hidden;
 
           &_empty {
-            padding: 40px;
+            display: none;
           }
 
           .input {
@@ -65,31 +65,6 @@
             display: flex;
             flex: 1;
           }
-
-          .empty-message {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            gap: 16px;
-
-            font-size: 14px;
-            line-height: 20px;
-            text-align: center;
-
-            &__main {
-              font-weight: 600;
-
-              color: var(--prizm-text-icon-primary);
-              text-align: center;
-            }
-
-            &__sub {
-              font-weight: 400;
-
-              color: var(--prizm-text-icon-tertiary);
-            }
-          }
         }
 
         .instruments {
@@ -98,7 +73,7 @@
 
           &__group {
             min-height: 24px;
-            padding: 0 15px;
+            padding: 0 8px;
 
             display: flex;
             gap: 10px;
@@ -107,25 +82,7 @@
 
             &:last-child {
               border: none;
-            }
-          }
-
-          &__icon {
-            height: 24px;
-            width: 24px;
-
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-            font-size: 16px;
-            line-height: 16px;
-            color: #8d91a4;
-
-            cursor: pointer;
-
-            &:hover {
-              color: #337eff;
+              padding-right: 0;
             }
           }
         }
