feat(components/accordion): change button size to xm #2393

--- a/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
+++ b/libs/components/src/lib/components/accordion/components/accordion-item/accordion-item.component.html
@@ -43,7 +43,7 @@
         prizmIconButton
         appearanceType="ghost"
         appearance="secondary"
-        size="m"
+        size="xm"
         tabindex="-1"
       ></button>
     </div>
