feat(components/file-upload): add hover for dropzone #2399

--- a/libs/components/src/lib/components/file-upload/file-upload.component.html
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.html
@@ -29,7 +29,7 @@
       prizmButton
       appearanceType="outline"
       appearance="secondary"
-      size="m"
+      size="xm"
     >
       {{ translations | prizmPluck: ['btn__select'] }}
     </button>
