--- a/libs/components/src/lib/components/file-upload/file-upload.component.less
+++ b/libs/components/src/lib/components/file-upload/file-upload.component.less
@@ -16,7 +16,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  &.active {
+
+  &.active,
+  &:hover {
     background-color: var(--prizm-table-fill-row-hover);
     border: 1px dashed var(--prizm-form-stroke-hover);
   }
