--- a/apps/doc/src/app/components/toast/toast.component.html
+++ b/apps/doc/src/app/components/toast/toast.component.html
@@ -41,11 +41,11 @@
       <button (click)="showToast()" prizmButton>Показать тост</button>
       <div>
         <p>Container inline</p>
-        <prizm-toast-container
-          #element
-          [prizmDocHostElement]="element"
-          [containerId]="containerId"
-        ></prizm-toast-container>
+        <!--        <prizm-toast-container-->
+        <!--          #element-->
+        <!--          [prizmDocHostElement]="element"-->
+        <!--          [containerId]="containerId"-->
+        <!--        ></prizm-toast-container>-->
       </div>
     </prizm-doc-demo>
     <prizm-doc-documentation ha>
