--- a/apps/doc/src/app/components/toast/examples/message-secondary-example/message-secondary-example.component.html
+++ b/apps/doc/src/app/components/toast/examples/message-secondary-example/message-secondary-example.component.html
@@ -36,7 +36,7 @@
 <hr />
 <div class="inline-container">
   <p>Inline Container</p>
-  <prizm-toast-container [containerId]="containerId"></prizm-toast-container>
+  <!--  <prizm-toast-container [containerId]="containerId"></prizm-toast-container>-->
 </div>
 <br />
 <hr />
